# serializer version: 1
# name: TestCreateArticleView.test_create_article_from_data
  '''
  {
    "annotations": [],
    "authors": [
      "Alexandre Dumas"
    ],
    "comments": [],
    "content": "<article>\n<div>\n<p>\n                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc porttitor dolor in justo pharetra suscipit. Vestibulum hendrerit felis id ex gravida egestas. Sed tempus placerat nibh. Proin faucibus bibendum magna in ultricies. Fusce feugiat sagittis odio a gravida. Pellentesque dignissim lorem quis eros placerat ullamcorper nec ut quam. Curabitur non tortor a justo hendrerit vehicula in a neque. Mauris vitae mi ante. Aenean et efficitur massa. Donec nec scelerisque lectus, eu malesuada urna. Aenean at dignissim purus. Praesent et tellus non ligula mollis commodo id sed felis. Phasellus fringilla non libero vitae efficitur.\n                    </p>\n<p>\n                        Vivamus eu ornare ligula. Sed ac justo eget metus tempus venenatis. Aenean ante arcu, dignissim sed bibendum nec, commodo ut tellus. Donec rhoncus leo a enim volutpat, ut porttitor risus sodales. Proin sit amet sapien vitae felis mollis luctus. Morbi malesuada nec quam sed facilisis. Vivamus urna quam, sagittis at eros vitae, porta eleifend orci. Aliquam nec velit enim. Suspendisse egestas pulvinar volutpat. Pellentesque nec sem eget nunc facilisis porta. Ut eleifend mi sed laoreet sollicitudin. Sed sagittis nibh eget quam luctus facilisis.\n                    </p>\n<p>\n                        Vestibulum eu nibh ullamcorper, luctus tortor eget, semper arcu. Curabitur id cursus urna, eu accumsan mi. Curabitur ornare elit vitae quam tempor egestas. Maecenas viverra malesuada sapien non blandit. Sed luctus pellentesque nulla eu pretium. Cras iaculis interdum interdum. Ut in metus purus. Aliquam id pretium velit, eu tempus tellus.\n                    </p>\n<div>\n<p>Opinion</p>\n<p>You may disagree</p>\n</div>\n</div>\n<div>\n<p>\n<a href=\"https://www.example.com/tag/Musketeers.html\" rel=\"noopener noreferrer\">Musketeers</a>\n</p>\n</div>\n</article>",
    "content_type": "text/html",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-slug/",
    "external_article_id": "external-article-id",
    "external_tags": [
      "Musketeers"
    ],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "fr",
    "main_feed": null,
    "main_source_title": "Super blog",
    "main_source_type": "MANUAL",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "https://example.com/images/profile.png",
    "published_at": "2024-02-26T23:00:00Z",
    "read_at": null,
    "reading_time": 1,
    "slug": "article-slug",
    "summary": "I just wrote a new book, I\u2019ll hope you will like it! Here are some thoughts on it.",
    "table_of_content": [],
    "tags": [],
    "title": "Article title",
    "updated_at": "2024-03-08T23:00:00Z",
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestCreateArticleView.test_create_article_from_data_without_content_extraction
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "<p>My content</p>",
    "content_type": "text/html",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-slug/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "",
    "main_feed": null,
    "main_source_title": "example.com",
    "main_source_type": "MANUAL",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": null,
    "read_at": null,
    "reading_time": 0,
    "slug": "article-slug",
    "summary": "<p>My content</p>",
    "table_of_content": [],
    "tags": [],
    "title": "Article title",
    "updated_at": null,
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestCreateArticleView.test_create_article_from_text_data
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "Just some text",
    "content_type": "text/plain",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-my-article/",
    "external_article_id": "",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "",
    "main_feed": null,
    "main_source_title": "example.com",
    "main_source_type": "MANUAL",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": null,
    "read_at": null,
    "reading_time": 0,
    "slug": "my-article",
    "summary": "Just some text",
    "table_of_content": [],
    "tags": [],
    "title": "My article",
    "updated_at": null,
    "url": "https://example.com/articles/legadilo.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestCreateArticleView.test_create_article_from_url_only
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "",
    "content_type": "text/plain",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-slug/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "en",
    "main_feed": null,
    "main_source_title": "Source 0",
    "main_source_type": "MANUAL",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": null,
    "read_at": null,
    "reading_time": 0,
    "slug": "article-slug",
    "summary": "",
    "table_of_content": [],
    "tags": [],
    "title": "Article title",
    "updated_at": null,
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestCreateArticleView.test_create_article_with_tags
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "",
    "content_type": "text/plain",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-slug/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "en",
    "main_feed": null,
    "main_source_title": "Source 0",
    "main_source_type": "MANUAL",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": null,
    "read_at": null,
    "reading_time": 0,
    "slug": "article-slug",
    "summary": "",
    "table_of_content": [],
    "tags": [
      {
        "slug": "some-tag",
        "title": "Some tag"
      }
    ],
    "title": "Article title",
    "updated_at": null,
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestGetArticleView.test_get
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [
      {
        "created_at": "2025-07-01T00:00:00.000Z",
        "text": "Some comment",
        "updated_at": "2025-07-01T00:00:00.000Z"
      }
    ],
    "content": "",
    "content_type": "text/html",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-title/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "",
    "main_feed": null,
    "main_source_title": "",
    "main_source_type": "FEED",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": "2024-11-24T17:57:00Z",
    "read_at": null,
    "reading_time": 0,
    "slug": "article-title",
    "summary": "",
    "table_of_content": [],
    "tags": [
      {
        "slug": "some-tag",
        "title": "Some tag"
      }
    ],
    "title": "Article title",
    "updated_at": "2024-11-24T17:57:00Z",
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestListArticlesGroup.test_list
  '''
  {
    "count": 1,
    "items": [
      {
        "description": "",
        "details_url": "http://testserver/reading/articles-groups/1-some-group/",
        "id": 1,
        "slug": "some-group",
        "tags": [
          {
            "slug": "some-tag",
            "title": "Some tag"
          }
        ],
        "title": "Some group"
      }
    ]
  }
  
  '''
# ---
# name: TestListTagsView.test_list
  '''
  {
    "count": 2,
    "items": [
      {
        "slug": "some-tag",
        "sub_tags": [],
        "title": "Some tag"
      },
      {
        "slug": "with-sub-tags",
        "sub_tags": [
          {
            "slug": "some-tag",
            "title": "Some tag"
          }
        ],
        "title": "With sub tags"
      }
    ]
  }
  
  '''
# ---
# name: TestUpdateArticleView.test_no_update
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "",
    "content_type": "text/html",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-title/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "",
    "main_feed": null,
    "main_source_title": "",
    "main_source_type": "FEED",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": "2024-11-24T17:57:00Z",
    "read_at": null,
    "reading_time": 0,
    "slug": "article-title",
    "summary": "",
    "table_of_content": [],
    "tags": [],
    "title": "Article title",
    "updated_at": "2024-11-24T17:57:00Z",
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestUpdateArticleView.test_update
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "",
    "content_type": "text/html",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-title/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": true,
    "language": "",
    "main_feed": null,
    "main_source_title": "",
    "main_source_type": "FEED",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": "2024-11-24T17:57:00Z",
    "read_at": "2024-11-24T18:00:00Z",
    "reading_time": 10,
    "slug": "article-title",
    "summary": "",
    "table_of_content": [],
    "tags": [],
    "title": "New title",
    "updated_at": "2024-11-24T17:57:00Z",
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
# name: TestUpdateArticleView.test_update_tags
  '''
  {
    "annotations": [],
    "authors": [],
    "comments": [],
    "content": "",
    "content_type": "text/html",
    "contributors": [],
    "details_url": "http://testserver/reading/articles/1-article-title/",
    "external_article_id": "external-article-id",
    "external_tags": [],
    "group": null,
    "group_order": 0,
    "id": 1,
    "is_favorite": false,
    "is_for_later": false,
    "is_read": false,
    "language": "",
    "main_feed": null,
    "main_source_title": "",
    "main_source_type": "FEED",
    "opened_at": null,
    "preview_picture_alt": "",
    "preview_picture_url": "",
    "published_at": "2024-11-24T17:57:00Z",
    "read_at": null,
    "reading_time": 0,
    "slug": "article-title",
    "summary": "",
    "table_of_content": [],
    "tags": [
      {
        "slug": "new-tag",
        "title": "New tag"
      },
      {
        "slug": "tag-to-keep",
        "title": "Tag to keep"
      }
    ],
    "title": "Article title",
    "updated_at": "2024-11-24T17:57:00Z",
    "url": "https://example.com/articles/article.html",
    "was_opened": false
  }
  
  '''
# ---
